o svctool: fixed path/MAXDAEMONS in tcpserver run scripts - major bug which
  prevented tcpserver reaching concurrency > 40
o filterit: New filterit command to implement filters
o qmail-lspawn: added filterit and envdir command
o overhaul CHECKSENDER code
o added feature to hide IP addresses in Received headers by setting HIDE_IP
  environment variable
o refactored and tested SPF code
===========================================================================
- 11/09/2023
01. cdb-database: allow comments in input file
02. svctool: localiphost incorrectly configured with IP instead of hostname
03. qmail-showctl.c: fixed descriptions for localiphost, outgoingip
- 13/09/2023
04. maildirdeliver.c: BUG. Remove NULL character appended to rpline, dtline
05. updated dot-qmail, maildirdeliver, qmail-command man pages
- 14/09/2023
06. svctool: fixed path/MAXDAEMONS in tcpserver run scripts [major]
- 15/09/2023
07. preline.c: moved check for env variables after getopt
- 17/09/2023
08. rspamstat.sh: Fixed division by zero when total=0
09. qmail-local: added internal filter command for dot-qmail [major]
10. filterit: added external filter command for dot-qmail [major]
- 19/09/2023
11. filterit_sub.c: fixed multiple invocation of filterit_sub1()
12. updated RCS logs for qmail-local.c, indimail-mta.spec, Makefile,
    filterit.c, filterit_sub.c
13. test-indimail-mta: added tests for internal and external filterit command
14. svctool: prevent dangling symbolic links in global_vars
15. filterit_sub.c, forward.c: added X-Forwarded-To, X-Forwarded-For headers
16. filterit_sub.c, forward.c: include hassrs.h to enable SRS
17. qmail-lspawn.c: set supplementary groups for user if SETUSER_PRIVILEGES is
    defined
18. qmail-lspawn.c: New exit code QLX_UIDGID for uid, gid, group setting
    errors
19. svctool: added --setuser-priv option to make qmail-lspawn set
    supplementary groups when running qmail-local
- 20/09/2023