@@ -9,6 +9,7 @@ o overhaul CHECKSENDER code
 o added feature to hide IP addresses in Received headers by setting HIDE_IP
   environment variable
 o refactored and tested SPF code
+o Bugfix SRS code
 ===========================================================================
 - 11/09/2023
 01. cdb-database: allow comments in input file
@@ -81,6 +82,11 @@ o refactored and tested SPF code
     variable HIDE_HOST to hide IP, host in received headers
 - 11/10/2023
 53. qmail-smtpd.c: added env variable HIDE_HOST to be displayed with -v option
+- 16/10/2023
+54. svctool: added --secureauth option to create env variable SECURE_AUTH for
+    SMTP service on port 587
+55. indimail-mta.spec, debian/indimail-mta-postinst: added --secureauth option
+    for smtp service on port 587
 
 * Fri Sep 08 2023 11:58:03 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.4-1.1%{?dist}
 Release 3.0.4-1.1 Start 24/04/2023 End 08/09/2023
